# Sentinel

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
dxapp/: dxapp.json
dxapp/src/: code.sh
examples/: sample_sheet_template.csv  sample_sheet_with_optional.csv
src/: anchor_check.py  charr.py  config.py  directional.py  extract_ad.py  genotyper.py  identity_loh.py  io_ad.py  mtdna_mixture.py  per_chrom.py  pipeline.py  pivot.py  post_process.py  read_haplotypes.py  report.py  tails.py  umi_metrics.py
src/sentinel/: __init__.py  anchor_check.py  charr.py  cli.py  directional.py  extract_ad.py  genotyper.py  identity_loh.py  io_ad.py  make_html_report.py  make_xlsx_report.py  panel_builder.py  per_chrom.py  pipeline.py  pivot.py  post_process.py  read_haplotypes.py  report.py  sct_discriminator.py  tails.py  umi_metrics.py
src/sentinel/tests/: conftest.py  synth.py  test_charr.py  test_directional.py  test_identity_loh.py  test_per_chrom.py  test_pipeline_smoke.py  test_read_haplotypes.py  test_sct_discriminator.py  test_tails.py  test_umi_metrics.py
src/tests/: conftest.py  test_charr.py  test_directional.py  test_identity_loh.py  test_per_chrom.py  test_pipeline_smoke.py  test_read_haplotypes.py  test_sct_discriminator.py  test_tails.py  test_umi_metrics.py
tools/: build_master_db.sh
