[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-cd"
version = "0.1.0"
description = "Cross-sample contamination and identity detector for targeted-capture NGS runs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pysam>=0.22",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14",
  "openpyxl>=3.1",
  "plotly>=5.20",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sentinel*"]
